- Agregado el número de mes en la descripción para el widget de selección de período en el modelo 'Pago' - Precarga de fecha del día al agregar un nuevo 'Pago' - Modificado globalmente el formato de fechas y períodos (d/m/Y, /m/Y) - Corregida verificación de ingreso de 'Pago' duplicado sólo en nuevos elementos agregados - Mejoras en orden y enlaces de las columnas en el administrador de 'Pago' y 'Gasto'

--- a/templates/admin/cochera/gasto/change_list.html
+++ b/templates/admin/cochera/gasto/change_list.html
@@ -3,15 +3,17 @@
 {% block result_list %}
 
 <table class="table-overview table-bordered table-condensed" style="width: 100%;">
+	<caption><strong>Totales</strong></caption>
 	<tbody>
 		<tr>
-			<td><strong>TOTALES</strong></td>
 			<th><strong>Ingresos:</strong></th>
 			<td>{{ total_pagos }}</td>
 			<th><strong>Gastos:</strong> </th>
 			<td>{{ total_gastos }}</td>
+			<th><strong>Retiros:</strong> </th>
+			<td>{{ total_retiros }}</td>
 			<th><strong>Saldo:</strong> </th>
-			<td>{{ total }}</td>
+			<td><strong>{{ total }}</strong></td>
 		</tr>
 	</tbody>
 </table>
