- Se agrega importe total de registros filtrados en los módulos 'Pago' y 'Gasto' - Se eliminan archivos innecesarios (templatetags y plantilla change_list_results.html)

--- a/cochera/templates/admin/cochera/gasto/change_list.html
+++ b/cochera/templates/admin/cochera/gasto/change_list.html
@@ -1,5 +1,4 @@
 {% extends 'admin/change_list.html' %}
-{% load cocheratags %}
 
 {% block result_list %}
 
@@ -7,6 +6,10 @@
 	<caption><strong>Totales</strong></caption>
 	<tbody>
 		<tr>
+			{% if total_filtrado %}
+			<th><strong>Total filtrado:</strong> </th>
+			<td>{{ total_filtrado }}</td>
+			{% endif %}
 			<th><strong>Ingresos:</strong></th>
 			<td>{{ total_pagos }}</td>
 			<th><strong>Gastos:</strong> </th>
@@ -19,7 +22,6 @@
 	</tbody>
 </table>
 
-<!--{% result_list cl %}-->
 {{ block.super }}
 
 {% endblock %}
