--- a/cochera/templates/cochera/base.html
+++ b/cochera/templates/cochera/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Cochera - {{ title }}</title>
- 		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/suit/bootstrap/css/bootstrap.min.css" media="all"/>
+		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/suit/bootstrap/css/bootstrap.min.css" media="all"/>
+		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/css/styles.css" media="all"/>
 	</head>
 
 	<body>
@@ -16,7 +17,7 @@
 			{% endblock %}
 		</div>
 
-	  <script src="{{ base_url }}/static/suit/js/jquery-1.8.3.min.js"></script>
-  	<script src="{{ base_url }}/static/suit/bootstrap/js/bootstrap.min.js"></script>
+		<script src="{{ base_url }}/static/suit/js/jquery-1.8.3.min.js"></script>
+		<script src="{{ base_url }}/static/suit/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
