--- a/cochera/templates/cochera/base.html
+++ b/cochera/templates/cochera/base.html
@@ -5,8 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Cochera - {{ title }}</title>
-		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/suit/bootstrap/css/bootstrap.min.css" media="all"/>
+		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/css/bootstrap.min.css" media="all"/>
 		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/css/styles.css" media="all"/>
+		<script src="{{ base_url }}/static/js/jquery.min.js"></script>
+		<script src="{{ base_url }}/static/js/bootstrap.min.js"></script>
+		<script src="{{ base_url }}/static/js/functions.js"></script>
 	</head>
 
 	<body>
@@ -16,8 +19,5 @@
 			{% block content %}
 			{% endblock %}
 		</div>
-
-		<script src="{{ base_url }}/static/suit/js/jquery-1.8.3.min.js"></script>
-		<script src="{{ base_url }}/static/suit/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
