--- a/cochera/templates/cochera/tabla.html
+++ b/cochera/templates/cochera/tabla.html
@@ -1,6 +1,17 @@
 {% extends "cochera/base.html" %}
 
 {% block content %}
+
+<form class="form" name="grilla" method="GET" action="/tabla">
+	<div class="form-group col-sm-3">
+		<select name="anio" id="anio" class="form-control">
+			{% for anio_opcion in rango_anios %}
+			<option {% if anio_opcion == anio %} selected="true"{% endif %}>{{ anio_opcion }}</option>
+			{% endfor %}
+		</select>
+	</div>
+</form>
+
 <table class="table table-striped table-condensed">
 	<tr>
 		<th class="text-center">Lugar</th>
