--- a/cochera/templates/cochera/base.html
+++ b/cochera/templates/cochera/base.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -5,11 +7,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Cochera - {{ title }}</title>
-		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/css/bootstrap.min.css" media="all"/>
-		<link rel="stylesheet" type="text/css" href="{{ base_url }}/static/css/styles.css" media="all"/>
-		<script src="{{ base_url }}/static/js/jquery.min.js"></script>
-		<script src="{{ base_url }}/static/js/bootstrap.min.js"></script>
-		<script src="{{ base_url }}/static/js/functions.js"></script>
+		<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}" media="all"/>
+		<link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}" media="all"/>
+		<script src="{% static "js/jquery.min.js" %}"></script>
+		<script src="{% static "js/bootstrap.min.js" %}"></script>
+		<script src="{% static "js/functions.js" %}"></script>
 	</head>
 
 	<body>
