--- a/cochera/templates/cochera/tabla.html
+++ b/cochera/templates/cochera/tabla.html
@@ -1,9 +1,14 @@
-{% extends "cochera/base.html" %}
+{% extends "admin/base.html" %}
+{% load staticfiles %}
+
+{% block extrahead %}
+<link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}" media="all"/>
+<script src="{% static "js/functions.js" %}"></script>
+{% endblock %}
 
 {% block content %}
-
-<form class="form-horizontal" name="grilla" method="GET" action="/tabla">
-	<table class="table table-bordered">
+<form class="form-horizontal" name="grilla" method="GET" action="/cochera/tabla">
+	<table class="table-overview table-bordered table-condensed" style="width: 100%;">
 		<tbody>
 			<tr class="vertical-center">
 				<th><strong>A&ntilde;o</strong></th>
@@ -31,25 +36,35 @@
 
 <table class="table table-striped table-condensed">
 	<tr>
-		<th class="text-center">Lugar</th>
+		<th class="text-center"><strong>Lugar</strong></th>
 
 		{% with pagos|first as encabezado %}
 		{% for periodo in encabezado.periodos.keys %}
-		<th class="text-center">{{ periodo }}/{{ anio }}</th>
+		<th class="text-center"><strong>{{ periodo }}/{{ anio }}</strong></th>
 		{% endfor %}
 		{% endwith %}
 	</tr>
 
 	{% for clave, detalle in pagos.items %}
 	<tr>
-		<th class="text-center"><a href="{{ base_url }}/lugar/{{ detalle.datos.lugar_id }}" title="{{ detalle.datos.titular }}" class="bs-tooltip">{{ clave }}</a></th>
+		<th class="text-center">
+			{% if perms.cochera.change_lugar %}
+			<a href="{{ baseurl }}/cochera/lugar/{{ detalle.datos.lugar_id }}" title="{{ detalle.datos.titular }}" class="bs-tooltip">{{ clave }}</a>
+			{% else %}
+			{{ clave }}
+			{% endif %}
+		</th>
 
 		{% for periodo, pago in detalle.periodos.items %}
 		<td class="text-center">
 			{% if pago.importe > 0 %}
-			<a href="{{ base_url }}/pago/{{ pago.id }}"><img src="{{ base_url }}/static/admin/img/icon-yes.gif" alt="si" title="Importe: ${{ pago.importe }}<br>Fecha: {{ pago.fecha_pago|date:"d/m/Y" }}" class="bs-tooltip"></a>
+				{% if perms.cochera.change_pago %}
+				<a href="{{ baseurl }}/cochera/pago/{{ pago.id }}"><img src="{% static "admin/img/icon-yes.gif" %}" alt="si" title="Importe: ${{ pago.importe }}<br>Fecha: {{ pago.fecha_pago|date:"d/m/Y" }}" class="bs-tooltip"></a>
+				{% else %}
+				<img src="{% static "admin/img/icon-yes.gif" %}" alt="si" title="Importe: ${{ pago.importe }}<br>Fecha: {{ pago.fecha_pago|date:"d/m/Y" }}" class="bs-tooltip">
+				{% endif %}
 			{% else %}
-			<img src="{{ base_url }}/static/admin/img/icon-no.gif" alt="no">
+			<img src="{% static "admin/img/icon-no.gif" %}" alt="no">
 			{% endif %}
 		</td>
 		{% endfor %}
