--- a/cochera/static/css/styles.css
+++ b/cochera/static/css/styles.css
@@ -2,5 +2,24 @@
 tr.vertical-center th,
 tr.vertical-center td
 {
-	vertical-align: middle !important;
+	vertical-align: middle;
+}
+
+.plano-grafico
+{
+	float: right;
+	margin: 5px 20px;
+}
+
+.plano-tabla
+{
+	width: 80%;
+	float: left;
+}
+
+.alerta-atraso,
+tr.alerta-atraso td
+{
+	font-weight: bold !important;
+	color: #FF5546;
 }
