- Mejoras en la visualización de lugares con meses de atraso en la vista 'Plano'

--- a/cochera/static/css/styles.css
+++ b/cochera/static/css/styles.css
@@ -5,10 +5,15 @@ tr.vertical-center td
 	vertical-align: middle;
 }
 
+.plano-container
+{
+	min-width: 1000px;
+}
+
 .plano-grafico
 {
 	float: right;
-	margin: 5px 20px;
+	margin: 30px 20px;
 }
 
 .plano-tabla
@@ -17,8 +22,7 @@ tr.vertical-center td
 	float: left;
 }
 
-.alerta-atraso,
-tr.alerta-atraso td
+tr.alerta-atraso td.dias-atraso
 {
 	font-weight: bold !important;
 	color: #FF5546;
