--- a/cochera/templates/admin/cochera/pago/change_form.html
+++ b/cochera/templates/admin/cochera/pago/change_form.html
@@ -1,11 +1,13 @@
 {% extends 'admin/change_form.html' %}
 {% load staticfiles %}
 
-{% block extrahead %}
+{% block extrajs %}
+{{ block.super }}
 <script src="{% static "js/functions.js" %}"></script>
 {% endblock %}
 
-{% block after_field_sets %}
-<input type="hidden" id="IMPORTE_ALQUILER_COCHERA" value="{{ IMPORTE_ALQUILER_COCHERA }}">
-<input type="hidden" id="IMPORTE_ALQUILER_OFICINA" value="{{ IMPORTE_ALQUILER_OFICINA }}">
+{% block field_sets %}
+{{ block.super }}
+<input type="hidden" id="IMPORTE_ALQUILER_COCHERA" name="a" value="{{ IMPORTE_ALQUILER_COCHERA }}">
+<input type="hidden" id="IMPORTE_ALQUILER_OFICINA" name="b" value="{{ IMPORTE_ALQUILER_OFICINA }}">
 {% endblock %}
